# pfsTest

./: CMakeLists.txt  README
analysis/: Makefile  filltree  filltree.cc  mytree.C  mytree.h
bench/: GlobalSetup.mac  M10Ev.txt  Makefile  main  main.cc  pfs.mac  primaryGeneratorSetup.mac  score.mac  test.mac  verboseSetup.mac  visSetup_Simplex.mac
source/: Application_Main.cc  CMakeLists.txt
source/include/: Geometry.hh  PltSensorHit.hh  PltSensorSD.hh  PltTargetHit.hh  PltTargetSD.hh  SensitiveVolume.hh
source/src/: Geometry.cc  PltSensorHit.cc  PltSensorSD.cc  PltSensorSD.cc.org  PltTargetHit.cc  PltTargetSD.cc  SensitiveVolume.cc
